--- a/index.html
+++ b/index.html
@@ -226,7 +226,7 @@
             <a href="#">Privacy Policy</a>
             <a href="#">Terms & Conditions</a>
             <a href="#">Cookie Policy</a>
-            <a href="#">Contact</a>
+            <a href="#sectTwo">Contact</a>
         </div>
     </footer>
 </body>
